# WisdomCRMERP

./: README.md
auth_signup_email_verification/: README.md  __manifest__.py
auth_signup_email_verification/controllers/: main.py
auth_signup_email_verification/data/: email_templates.xml
auth_signup_email_verification/i18n/: fr.po
auth_signup_email_verification/models/: __init__.py  res_config_settings.py  res_partner.py  res_users.py  signup_field_selector.py
auth_signup_email_verification/security/: ir.model.access.csv
auth_signup_email_verification/views/: res_config_settings_views.xml  signup_templates.xml
hr-attendance-18.0/: .copier-answers.yml  README.md
hr-attendance-18.0/hr_attendance_reason/: README.rst  __manifest__.py
hr-attendance-18.0/hr_attendance_report_theoretical_time/: README.rst
hr-attendance-18.0/hr_attendance_rfid/: README.rst  __manifest__.py
hr-attendance-18.0/hr_contract_update_overtime/: README.rst  __manifest__.py
hr-attendance-18.0/setup/_metapackage/: pyproject.toml
wisdom_acasa/: __manifest__.py
wisdom_acasa/security/: ir.model.access.csv
wisdom_acasa/views/: acasa_menu.xml
wisdom_crm/: __manifest__.py
wisdom_crm/models/: __init__.py  beneficiar_curs.py  beneficiari.py  beneficiari_activitate.py  courses.py  fisa_servicii.py  instruments.py
wisdom_crm/security/: ir.model.access.csv
wisdom_crm/views/: activitate.xml  courses_views.xml  (+4 more)
wisdom_donatii/: __init__.py  __manifest__.py
wisdom_employee_review/: __manifest__.py
wisdom_event/: __manifest__.py
wisdom_hr_employee/: __init__.py  __manifest__.py
(+184 files in other folders)
