[project]
name = "odoo-addons-oca-hr-attendance"
version = "18.0.20250811.0"
dependencies = [
    "odoo-addon-hr_attendance_reason==18.0.*",
    "odoo-addon-hr_attendance_report_theoretical_time==18.0.*",
    "odoo-addon-hr_attendance_rfid==18.0.*",
    "odoo-addon-hr_contract_update_overtime==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
